--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "pvtl/voyager-frontend": "^0.9.2",
         "tcg/voyager": "^1.2"
     },
     "require-dev": {
